// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/GoogleCloudPlatform/apigee-samples/extension-processor-grpc/backend/pkg/greeter/generated/pb";

package helloworld;

message SayHelloReq {
  string name = 1;
}

message SayHelloRes {
  string message = 1;
}

message CountToReq {
  int32 to = 1;
}

message CountToRes {
  int32 count = 1;
}

service Greeter {
  rpc SayHello(SayHelloReq) returns (SayHelloRes) {};
  rpc CountTo(CountToReq) returns (stream CountToRes) {};
}